--- a/Games/Simon_Says/Simon_Says.html
+++ b/Games/Simon_Says/Simon_Says.html
@@ -6,15 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Simon Says</title>
-	<link rel="stylesheet" type="text/css" href="week4.css"/>
+	<link rel="stylesheet" type="text/css" href="css/module_6.css"/>
 
 	<!-- load jQuery 1.12.4 from CDN -->
 	<script src="https://code.jquery.com/jquery-1.12.4.min.js"
 		integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
 		crossorigin="anonymous">
 	</script>
+	<script src="js/jquery-3.2.1.slim.min.js"></script>
 	<!-- load custom script for game play -->
-	<script src="week4.js"></script>
+	<script src="js/module_6.js"></script>
 </head>
 
 <body>
